src/styles.css
@import url('https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
@import './themes/prism.css';

:root {
  --bg-color: white;
  --font-color: black;
  --accent-color: #e5e8eb;
}

body.dark-mode {
  --bg-color: #121a21;
  --font-color: white;
  --accent-color: #E5E8EB;
}

html {
  font-size: 10px;
  font-family: "DM Mono", monospace;
}

body {
  margin: 0;
  background-color: var(--bg-color);
  color: var(--font-color);
}

